variables.RunFour.scala.error
Erreur de compilation :
RunFour:2: error: Int(4) does not take parameters
if (Nb != 4()) {
           ^RunFour:5: error: Boolean does not take parameters
else (estSurBiscuit()) {
                       ^